# pequod

./: .gitignore  CHANGELOG.md  LICENSE-CC-BY-4.0  LICENSE-MIT  Makefile  README.md  pequod.json
examples/: README.md  plots.py
python/: LICENSE  README.md  pyproject.toml
python/data-raw/: generate_data.py
python/src/pequod/: __init__.py  _data.py  _mpl.py  _palettes.py
python/tests/: test_mpl.py  test_palettes.py
r/: .Rbuildignore  DESCRIPTION  LICENSE  NAMESPACE  README.md  cran-comments.md
r/R/: palettes-data.R  palettes.R  pequod-package.R  preview.R  scales.R
r/data-raw/: generate_palettes.R
r/man/: palette_pequod.Rd  pequod-package.Rd  pequod_crew.Rd  pequod_crew_dark.Rd  pequod_crew_light.Rd  pequod_log.Rd  pequod_preview.Rd  scale_color_pequod_c.Rd  scale_color_pequod_d.Rd
r/tests/: testthat.R
r/tests/testthat/: test-palettes.R
scripts/: cvd_check.py  design_palette.py
specimen/: specimen.typ
tailwind/: LICENSE  README.md  index.d.ts  index.js  package.json  test.js
themes/: Pequod-color-theme.json  Pequod.itermcolors  Pequod.zed.json
themes/terminals/: Pequod.alacritty.toml  Pequod.ghostty  Pequod.kitty.conf  Pequod.tmux.conf  Pequod.wezterm.lua  Pequod.windowsterminal.json  README.md
vscode/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  package.json
vscode/themes/: Pequod-light-color-theme.json
